force-app/main/default/objects/IndividualPerformance__c/IndividualPerformance__c.object-meta.xml
<CustomObject>
    <label>INDV Performance</label>
    <nameField>
        <displayFormat>IP-{000000}</displayFormat>
        <label>INDIVIDUAL PERFORMANCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>INDV Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>