force-app/main/default/objects/IndividualPerformance__c/fields/AccumulatedAnnualPerformance__c.field-meta.xml
<CustomField>
    <fullName>AccumulatedAnnualPerformance__c</fullName>
    <formula>JANPerformance__c + 
FEBPerformance__c + 
MARPerformance__c + 
APRPerformance__c + 
MAYPerformance__c + 
JUNPerformance__c + 
JULPerformance__c + 
AUGPerformance__c + 
SEPPerformance__c + 
OCTPerformance__c + 
NOVPerformance__c + 
DECPerformance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACCUMULATED ANNUAL PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>