force-app/main/default/objects/IndividualPerformance__c/fields/AllocatedAnnualTarget__c.field-meta.xml
<CustomField>
    <fullName>AllocatedAnnualTarget__c</fullName>
    <formula>IndividualTargetID__r.AnnaulTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALLOCATED ANNUAL TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>