force-app/main/default/objects/IndividualPerformance__c/fields/AllocatedMonthlyTarget__c.field-meta.xml
<CustomField>
    <fullName>AllocatedMonthlyTarget__c</fullName>
    <formula>IndividualTargetID__r.MonthlyTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALLOCATED MONTHLY TARGET</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>