force-app/main/default/objects/IndividualPerformance__c/fields/AnnualAchievement__c.field-meta.xml
<CustomField>
    <fullName>AnnualAchievement__c</fullName>
    <formula>AccumulatedAnnualPerformance__c / AllocatedAnnualTarget__c</formula>
    <label>ANNUAL ACHIEVEMENT(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>