force-app/main/default/objects/IndividualPerformance__c/fields/AnnualPerformanceEndDate__c.field-meta.xml
<CustomField>
    <fullName>AnnualPerformanceEndDate__c</fullName>
    <label>ANNUAL PERFORMANCE END DATE</label>
    <type>Date</type>
</CustomField>