force-app/main/default/objects/IndividualPerformance__c/fields/APRPerformance__c.field-meta.xml
<CustomField>
    <fullName>APRPerformance__c</fullName>
    <label>APR PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>