force-app/main/default/objects/IndividualPerformance__c/fields/AUGAchievement__c.field-meta.xml
<CustomField>
    <fullName>AUGAchievement__c</fullName>
    <formula>AUGPerformance__c / AllocatedMonthlyTarget__c</formula>
    <label>AUG ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>