force-app/main/default/objects/IndividualPerformance__c/fields/AUGPerformance__c.field-meta.xml
<CustomField>
    <fullName>AUGPerformance__c</fullName>
    <label>AUG PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>