force-app/main/default/objects/IndividualPerformance__c/fields/DataPull__c.field-meta.xml
<CustomField>
    <fullName>DataPull__c</fullName>
    <label>DATA PULL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CloKPIDataPull</valueSetName>
    </valueSet>
</CustomField>