force-app/main/default/objects/IndividualPerformance__c/fields/FEBAchievement__c.field-meta.xml
<CustomField>
    <fullName>FEBAchievement__c</fullName>
    <formula>FEBPerformance__c /  AllocatedMonthlyTarget__c</formula>
    <label>FEB ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>