force-app/main/default/objects/IndividualPerformance__c/fields/FEBPerformance__c.field-meta.xml
<CustomField>
    <fullName>FEBPerformance__c</fullName>
    <label>FEB PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>