force-app/main/default/objects/IndividualPerformance__c/fields/JANAchievement__c.field-meta.xml
<CustomField>
    <fullName>JANAchievement__c</fullName>
    <formula>JANPerformance__c /  AllocatedMonthlyTarget__c</formula>
    <label>JAN ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>