force-app/main/default/objects/IndividualPerformance__c/fields/JULAchievement__c.field-meta.xml
<CustomField>
    <fullName>JULAchievement__c</fullName>
    <formula>JULPerformance__c / AllocatedMonthlyTarget__c</formula>
    <label>JUL ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>