force-app/main/default/objects/IndividualPerformance__c/fields/JULPerformance__c.field-meta.xml
<CustomField>
    <fullName>JULPerformance__c</fullName>
    <label>JUL PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>