force-app/main/default/objects/IndividualPerformance__c/fields/JUNAchievement__c.field-meta.xml
<CustomField>
    <fullName>JUNAchievement__c</fullName>
    <formula>JUNPerformance__c / AllocatedMonthlyTarget__c</formula>
    <label>JUN ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>