force-app/main/default/objects/IndividualPerformance__c/fields/JUNPerformance__c.field-meta.xml
<CustomField>
    <fullName>JUNPerformance__c</fullName>
    <label>JUN PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>