force-app/main/default/objects/IndividualPerformance__c/fields/KPIID__c.field-meta.xml
<CustomField>
    <fullName>KPIID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI ID</label>
    <referenceTo>KPI__c</referenceTo>
    <relationshipLabel>INDIVIDUAL PERFORMANCE</relationshipLabel>
    <relationshipName>IndividualPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>