force-app/main/default/objects/IndividualPerformance__c/fields/MARAchievement__c.field-meta.xml
<CustomField>
    <fullName>MARAchievement__c</fullName>
    <formula>MARPerformance__c / AllocatedMonthlyTarget__c</formula>
    <label>MAR ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>