force-app/main/default/objects/IndividualPerformance__c/fields/MARPerformance__c.field-meta.xml
<CustomField>
    <fullName>MARPerformance__c</fullName>
    <label>MAR PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>