force-app/main/default/objects/IndividualPerformance__c/fields/MAYPerformance__c.field-meta.xml
<CustomField>
    <fullName>MAYPerformance__c</fullName>
    <label>MAY PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>