force-app/main/default/objects/IndividualPerformance__c/fields/NOVAchievement__c.field-meta.xml
<CustomField>
    <fullName>NOVAchievement__c</fullName>
    <formula>NOVPerformance__c / AllocatedMonthlyTarget__c</formula>
    <label>NOV ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>