force-app/main/default/objects/IndividualPerformance__c/fields/NOVPerformance__c.field-meta.xml
<CustomField>
    <fullName>NOVPerformance__c</fullName>
    <label>NOV PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>