force-app/main/default/objects/IndividualPerformance__c/fields/OCTAchievement__c.field-meta.xml
<CustomField>
    <fullName>OCTAchievement__c</fullName>
    <formula>OCTPerformance__c / AllocatedMonthlyTarget__c</formula>
    <label>OCT ACHIEVEMENT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>