force-app/main/default/objects/IndividualPerformance__c/fields/OrganizationPerformanceID__c.field-meta.xml
<CustomField>
    <fullName>OrganizationPerformanceID__c</fullName>
    <label>ORGANIZATION PERFORMANCE ID</label>
    <referenceTo>OrganizationPerformance__c</referenceTo>
    <relationshipLabel>INDIVIDUAL PERFORMANCE</relationshipLabel>
    <relationshipName>IndividualPerformance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>