force-app/main/default/objects/IndividualPerformance__c/fields/SEPPerformance__c.field-meta.xml
<CustomField>
    <fullName>SEPPerformance__c</fullName>
    <label>SEP PERFORMANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>