force-app/main/default/objects/IndividualPerformance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IndividualPerformanceName__c</columns>
    <columns>OrganizationPerformanceID__c</columns>
    <columns>Active__c</columns>
    <columns>EmployeeID__c</columns>
    <columns>FullName__c</columns>
    <columns>KPIID__c</columns>
    <columns>KPIName__c</columns>
    <columns>AccumulatedAnnualPerformance__c</columns>
    <columns>AllocatedAnnualTarget__c</columns>
    <columns>AnnualAchievement__c</columns>
    <columns>PerformanceMeasurementUnit__c</columns>
    <columns>AnnualPerformanceStartDate__c</columns>
    <columns>AnnualPerformanceEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>