force-app/main/default/objects/IndividualPerformance__c/listViews/IndividualPerformanceProcessing.listView-meta.xml
<ListView>
    <fullName>IndividualPerformanceProcessing</fullName>
    <columns>NAME</columns>
    <columns>EmployeeID__c</columns>
    <columns>KPICategory__c</columns>
    <columns>JANPerformance__c</columns>
    <columns>FEBPerformance__c</columns>
    <columns>MARPerformance__c</columns>
    <columns>APRPerformance__c</columns>
    <columns>MAYPerformance__c</columns>
    <columns>JUNPerformance__c</columns>
    <columns>JULPerformance__c</columns>
    <columns>AUGPerformance__c</columns>
    <columns>SEPPerformance__c</columns>
    <columns>OCTPerformance__c</columns>
    <columns>NOVPerformance__c</columns>
    <columns>DECPerformance__c</columns>
    <filterScope>Everything</filterScope>
    <label>INDIVIDUAL PERFORMANCE PROCESSING</label>
    <language>en_US</language>
</ListView>